# eufs_sim

./: README.md
eufs_description/: CMakeLists.txt  README.md  package.xml
eufs_description/config/rqt/: visualisator_overlay.perspective
eufs_description/config/rviz/: visualisator.rviz
eufs_description/launch/: eufs_rviz.launch  visualisator.launch
eufs_description/meshes/: ads-dv.dae  untitled.dae  wheel.dae  wheel_left.dae  wheel_right.dae
eufs_description/models/acceleration/: model.config  model.sdf
eufs_description/models/big_cone/: model.config  model.sdf
eufs_description/models/big_track/: model.config  model.sdf
eufs_description/models/blue_cone/: model.config  model.sdf
eufs_description/models/ground_plane/: model.config  model.sdf
eufs_description/models/skidpad/: model.sdf
eufs_description/models/small_track/: model.config  model.sdf
eufs_description/models/sprint17/: model.sdf
eufs_description/models/sprint17_min/: model.config  model.sdf
eufs_description/models/yellow_cone/: model.config  model.sdf
eufs_description/robots/: ads-dv-torque.urdf.xacro  ads-dv.urdf.xacro  eufs.urdf  eufs.urdf.xacro  imechie.urdf.xacro  wheelchair.urdf.xarco
eufs_description/scripts/: camera_overlay.py  twist_to_ackermannDrive.py
eufs_description/sensors/: VLP-16.urdf.xacro  VLP-16R.urdf.xacro  all_sensors.urdf.xacro  gps.urdf.xacro  gps_with_mast.urdf.xacro  hokuyo_utm30lx.urdf.xacro  imu.urdf.xacro  imu_hector_plugin.urdf.xacro  kinect.urdf.xacro  kinectv2.urdf.xacro  pointgrey_bumblebee2.urdf.xacro  zed.urdf.xarco
eufs_description/urdf/bases/: ads-dv_base.urdf.xacro  eufs_base.gazebo.xacro  eufs_base.urdf.xacro  imechie_base.urdf.xacro
eufs_description/urdf/wheels/: suspension_wheel.urdf.xacro
eufs_gazebo/: CMakeLists.txt  README.md  package.xml
eufs_gazebo/config/: ddpg.rviz  eufs_control.yaml
eufs_gazebo/launch/: acceleration.launch  big_track.launch  empty.launch  eufs.launch  eufs_control.launch  extractor.launch  load_car_torque.launch  skidpad.launch  small_track.launch  sprint17.launch
eufs_gazebo/nodes/: extractor.py  ground_truth_republisher.py
eufs_gazebo/tracks/: Sprint17Details.csv  acceleration.csv  big_track.csv  skidpad.csv  small_track.csv
eufs_gazebo/worlds/: acceleration.world  big_track.world  noisy_small_track.world  skidpad.world  small_track.world  sprint17.world  sprint17_min.world
eufsa_description/: CMakeLists.txt  README.md  package.xml
eufsa_description/config/rqt/: visualisator.perspective
eufsa_description/launch/: eufsa_rviz.launch  rqt_robot_steering.launch  velodyne_processing.launch  visualisator.launch
eufsa_description/meshes/: chassis.dae  chassis_collision.dae  zed.dae
eufsa_description/models/acceleration/: model.sdf
eufsa_description/models/big_track/: model.sdf
eufsa_description/models/skidpad/: model.config  model.sdf
eufsa_description/models/small_track/: model.sdf
eufsa_description/models/sprint17/: model.config  model.sdf
eufsa_description/models/sprint17_min/: model.sdf
eufsa_description/robots/: eufsa.urdf  eufsa.urdf.xacro  imechie.urdf.xacro  wheelchair.urdf.xarco
eufsa_description/scripts/: camera_overlay.py  twist_to_ackermannDrive.py
eufsa_description/sensors/: VLP-16.urdf.xacro  VLP-16R.urdf.xacro  all_sensors.urdf.xacro  gps.urdf.xacro  gps_with_mast.urdf.xacro  hokuyo_utm30lx.urdf.xacro  imu.urdf.xacro  kinect.urdf.xacro  kinectv2.urdf.xacro  pointgrey_bumblebee2.urdf.xacro  zed.urdf.xarco
eufsa_description/urdf/bases/: eufsa_base.gazebo.xacro  eufsa_base.urdf.xacro  imechie_base.urdf.xacro
eufsa_description/urdf/wheels/: suspension_wheel.urdf.xacro
eufsa_gazebo/: CMakeLists.txt  package.xml
eufsa_gazebo/config/: eufsa_control.yaml  rbcar_robot_control.yaml
eufsa_gazebo/launch/: acceleration.launch  big_track.launch  develop.launch  empty.launch  eth_bag.launch  eufsa.launch  eufsa_control.launch  sim.launch  skidpad.launch  small_track.launch  sprint17.launch
eufsa_gazebo/worlds/: acceleration.world  big_track.world  noisy_small_track.world  skidpad.world  small_track.world  sprint17.world  sprint17_min.world
eufsa_robot_control/: CMakeLists.txt  package.xml
eufsa_robot_control/launch/: eufsa_robot_control.launch
eufsa_robot_control/src/: eufsa_robot_control.cpp
robot_control/: CMakeLists.txt  README.md  package.xml
robot_control/config/: ackermann_controller.yaml  chassisCommandPriorities.yaml  joint_controller.yaml
robot_control/launch/: robot_control.launch  rqt_robot_control.launch  rqt_robot_control_direct.launch
robot_control/nodes/: ackermann_controller.py  twist_to_ackermannDrive.py  twist_to_chassisCommand.py
robot_control/src/: robot_control.cpp
