<?xml version="1.0"?>
<package>
  <name>eufsa_gazebo</name>
  <version>0.1.0</version>
  <description>The eufsa_gazebo package</description>

  <maintainer email="s1521716@ed.ac.uk">Ignat Georgiev</maintainer>
  <maintainer email="s1217795@ed.ac.uk">Stephanos Loizou</maintainer>
  <maintainer email="s1728664@ed.ac.uk">Oliver Day</maintainer>

  <url type="website">http://eufs.co</url>
  <url type="repository">https://github.com/eufsa/eufsa_sim</url>
  <url type="bugtracker">https://github.com/eufsa/eufsa_sim/issues</url>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>eufsa_description</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>eufsa_description</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>tf</run_depend>

  <export>
    <gazebo_ros                                                                 
        gazebo_plugin_path="${prefix}/lib"
        gazebo_model_path="${prefix}/.." /> 
  </export>
  
</package>
